--- a/hpa-v2.yaml
+++ b/hpa-v2.yaml
@@ -1,8 +1,7 @@
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: hello-world-v2-hpa
-  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -11,10 +10,10 @@ spec:
   minReplicas: 1
   maxReplicas: 10
   metrics:
-    - type: Pods
-      pods:
-        metric:
-          name: http_requests_per_second
-        target:
-          type: AverageValue
-          averageValue: "10"
+  - type: External
+    metric:
+      name: http_requests_total
+      namespace: default
+    target:
+      type: AverageValue
+      value: "100"
