--- a/hpa-v1.yaml
+++ b/hpa-v1.yaml
@@ -2,7 +2,6 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: hello-world-v1-hpa
-  namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -11,13 +10,9 @@ spec:
   minReplicas: 1
   maxReplicas: 10
   metrics:
-    - type: External
-      external:
-        metric:
-          name: http_requests_total
-          selector:
-            matchLabels:
-              app: hello-world-v1
-        target:
-          type: AverageValue
-          averageValue: "20" 
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
