--- a/hpa-v1.yaml
+++ b/hpa-v1.yaml
@@ -1,7 +1,7 @@
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: hello-world-v1-hpa
+  name: hello-world-v1
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -9,10 +9,4 @@ spec:
     name: hello-world-v1
   minReplicas: 1
   maxReplicas: 10
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 50
+  targetCPUUtilizationPercentage: 50
