--- a/deployment-v2.yaml
+++ b/deployment-v2.yaml
@@ -28,5 +28,5 @@ spec:
             cpu: "1"
             memory: "1Gi"
           requests:
-            cpu: "700m"
-            memory: "1Gi"
+            cpu: "200m"
+            memory: "500Mi"
